--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -3,10 +3,8 @@
 html {
   box-sizing: border-box;
 }
-*, *:before, *:after {
+*,
+*:before,
+*:after {
   box-sizing: inherit;
-}
-
-body {
-  margin: 0;
 }
